fix: overflow long text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -127,7 +127,7 @@ body {
 }
 // css for td
 td {
-  max-width: 100px;
+  max-width: 500px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
